2001-09-10  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: If can't walk to target, wander a bit.
	* actors.cc:  Only call 'equipped' usecode for a few items in
	Black Gate.
	* egg.cc:  Teleport eggs are flagged as 'solid', and you now have
	to be at the exact lift to trigger one.

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* mapedit/studio.cc: More reliable getcwd. Prevent crashes if cancelling 'open static'

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* mapedit/(studio files). G++ v3 compilation: Standards and
		namespaces. Recast unsigned char* to char*

2001-09-10  Jeff Freedman  <jeff@amy.nerble.net>

	* several:  Map_chunk::find_spot() replaces find_unblocked_tile().

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* Take our own advice and clear streams between attempted
		file opens. Otherwise, we can succeed in opening
		the file, and still throw a file-not-found. Duh.

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* stdio.h doesn't declare snprintf in std::, but cstdio does.

2001-09-11  Dancer Vesperman  <dancer@users.sourceforge.net>

	* uccparse.o depends on ucclex.c being created first.

2001-09-09  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Party_near uses same test as avatar_near.
	* actors.cc: Shields can go in shield spot (SI).

2001-09-08  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Only set NPC's invisible.

	* actors.cc (Actor): More 'improvements' to ::follow().
	* paths.cc (Offscreen_pathfinder_client): Walking off-screen,
	z-coord. doesn't matter.

2001-09-07  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Init. conversation if speech enabled.
	Clears leftover faces on screen.

2001-09-06  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/iregobjs.cc, gamewin.cc: Get okay_to_take flag from bit 7
	of quality for 'quantity' items.

	* usecode/ucinternal.cc: Fixed add_party_items() return value for SI.
