@@ -27,6 +27,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #endif
 #include <glib.h>
 #include <unistd.h>
+#include <errno.h>
 
 #include <cstdio>			/* These are for sockets. */
 #include <sys/socket.h>
