@@ -1,3 +1,9 @@
+2001-09-12  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* siintrinsics.h,intrinsics.cc:  Added (a guess) init_conversation().
+
+	* actors.cc,monstinf.h:  Don't create body if 'has_no_body()'.
+
 2001-09-10  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* combat.cc: If can't walk to target, wander a bit.
